Adding new emacs mode for versions 22.0 and 22.1 of emacs, provided by Steve Balensiefer as part of his CSE590o project. Removing old version of support for 22.0 which was fragile and required using a very specific version of emacs that was no longer available.
To switch over to this new mode, you will need to change the
line of your .emacs file that used to say:

(autoload 'chpl-mode "cc-mode" "Chpl enhanced cc-mode" t)

with:

(autoload 'chpl-mode "chpl-mode" "Chpl enhanced cc-mode" t)

This new mode is not compatible with emacs 21.3 and 21.4,
so added a chpl-mode file in those directories that loads
the cc-mode.el file so that the above line will work
across all versions of emacs that we support.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12695 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/etc/emacs/README
+++ b/etc/emacs/README
@@ -2,12 +2,14 @@
 Chapel emacs mode
 =================
 
-This directory subtree contain versions of standard emacs e-lisp
-files, hacked to do simple formatting of Chapel code.  Chapel
-formatting is far from perfect, but also far better than having no
-formatting at all.  Version 22.0 is the main version that we are
-currently supporting -- the earlier versions are somewhat stale and
-likely to get more stale over time.
+This directory subtree contains emacs e-lisp files that perform simple
+formatting of Chapel code.  Support for Chapel formatting with these
+files is far from perfect, but also far better than having no
+formatting at all.  Versions 22.0/22.1 are the main version that we
+are currently supporting -- the earlier versions are somewhat stale
+and likely to only get staler over time.  Thanks to Steve Balensiefer
+for providing the initial version of the Chapel mode for these
+versions.
 
 The sources in this subdirectory are licensed under the GPL.  See the
 COPYING file in this directory for more information.
@@ -40,8 +42,8 @@ following lines to your standard .emacs file:
   )
 
 ; make sure that when chpl-mode is entered, (our modified) cc-mode is
-;  loaded
-(autoload 'chpl-mode "cc-mode" "Chpl enhanced cc-mode" t)
+; loaded
+(autoload 'chpl-mode "chpl-mode" "Chpl enhanced cc-mode" t)
 
 ; make loading files with a .chpl extension put emacs into chpl-mode
 (setq auto-mode-alist (cons '("\\.chpl$" . chpl-mode)
