Added support for "point of instantiation" semantics and removed a future.  This says that an instantiated function uses the call for which it was instantiated as its definition point in order to determine the visible functions when resolving calls in its body. This is implemented via SymScope* Symbol::instantiationPoint which points to the scope of the call for which the function was instantiated.  Following C++, if a function is instantiated by more than one call, the an arbitrary call is chosen as the instantiation point.
Unmarked functions with class arguments as global.  All class methods
are still marked as global in order to support dynamic dispatch.
Without multiple dispatch, it is no longer necessary to mark any
function with a class argument as global.

Updated three .goods which changed due to the visibility changes of
functions with class arguments.  Added a test of a nested function
with class arguments that refers to an outer variable.

Updated the spec.

Note that I inserted a hack in function resolution to handle an odd
case where the compiler-generated _cast function for records would
call the constructor of a record from within it.  This could probably
work with a function resolution that works out-of-order which I think
should probably be bumped up in priority next year.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12721 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Functions.tex
+++ b/spec/Functions.tex
@@ -427,10 +427,9 @@ A function is a visible function to a function call if the name of the
 function is the same as the name of the function call and the function
 is defined or used in a lexical outer scope.
 
-\index{functions!with class arguments}
-Additionally, functions that have arguments of class type are
-considered globally visible and so are always visible regardless of
-the location of their definition.
+\index{class methods!and visibility}
+Additionally, class methods are considered globally visible and so are
+always visible regardless of the location of their definition.
 
 \subsubsection{Determining Candidate Functions}
 \label{Determining_Candidate_Functions}
@@ -569,16 +568,15 @@ Nesting of functions may be done to arbitrary degrees, i.e., a
 function can be nested in a nested function.
 
 Nested functions are only visible to function calls within the scope
-in which they are defined.  An exception is to a function that has an
-argument that is a class type.  Such functions are globally visible.
+in which they are defined.  Class methods are exceptions; such methods
+are globally visible.
 
 \subsubsection{Accessing Outer Variables}
 \label{Accessing_Outer_Variables}
 
 Nested functions may refer to variables defined in the function in
-which they are nested.  If the function has class arguments, and is
-thus globally visible, it is a compiler error to refer to a variable
-in the outer function.
+which they are nested.  If the function is a class method, it is a
+compiler error to refer to a variable in the outer function.
 
 \begin{rationale}
 It may be too strict to make this a compiler error.  Are there
