--- a/spec/Generics.tex
+++ b/spec/Generics.tex
@@ -176,6 +176,9 @@ argument is taken to be the type of the actual argument passed to the
 function at the call site.  If the domain is omitted, the domain of
 the formal argument is taken to be the domain of the actual argument.
 
+A queried domain may not be modified via the name to which it is bound
+(see~\rsec{Association_of_Arrays_to_Domains} for rationale).
+
 \subsection{Function Visibility in Generic Functions}
 \label{Function_Visibility_in_Generic_Functions}
 \index{generics!function visibility}
