Fix a small typo in an example. The example uses "object" where it meant "obj".
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12737 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Parallelism_and_Synchronization.tex
+++ b/spec/Parallelism_and_Synchronization.tex
@@ -617,7 +617,7 @@ atomic {
     while last != null {
     if last.next == obj {
       found = true;
-      last.next = object.next;
+      last.next = obj.next;
       break;
     }
     last = last.next;
