Added Search and Sort modules to the introduction of the Standard Modules section.
Removed mention of HPLS from Scope section.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12749 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Scope.tex
+++ b/spec/Scope.tex
@@ -3,8 +3,7 @@
 
 Chapel is a new parallel programming language that is under
 development at Cray Inc. in the context of the DARPA High Productivity
-Language Systems initiative and the DARPA High Productivity Computing
-Systems initiative.
+Computing Systems initiative.
 
 This document specifies the Chapel language.  It is a work in progress
 and is not definitive.  In particular, it is not a standard.
