--- a/spec/Standard_Modules.tex
+++ b/spec/Standard_Modules.tex
@@ -11,6 +11,8 @@ standard modules include the following:
 \hspace{1pc} & \chpl{BitOps} & Bit manipulation routines \\
  & \chpl{Math} & ({\it used by default}) Math routines \\
  & \chpl{Random} & Random number generation routines \\
+ & \chpl{Search} & Generic searching routines \\
+ & \chpl{Sort} & Generic sorting routines \\
  & \chpl{Standard} & ({\it used by default}) Basic routines \\
  & \chpl{Time} & Types and routines related to time \\
  & \chpl{Types} & ({\it used by default}) Routines related to primitive types \\
